# classroom_backend

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  aerich.ini  alembic.ini  app.py  compile_translation.sh  docker-compose.prod.yaml  docker-compose.yaml  dockerfile.dev  example.env  pyproject.toml  pytest.ini  requirements.txt  shell.py  translate.sh
.github/workflows/: ci.yml
apps/: __init__.py
apps/attachment/: exceptions.py  models.py  schemas.py  views.py
apps/chat/: containers.py  managers.py  models.py  schemas.py  views.py
apps/classroom/: constants.py  models.py  schemas.py  utils.py
apps/common/: containers.py  database.py  factory.py  models.py  schemas.py  utils.py
apps/user/: constants.py  containers.py  dependencies.py  exceptions.py  models.py  schemas.py  utils.py  views.py
common/: containers.py  factory.py  models.py  utils.py
common/config/: __init__.py  example.env  huey.py  integrations.py  settings.py  tortoise.py
common/services/: author.py  base.py  decorators.py  email.py
core/apps/: __init__.py
core/common/: containers.py  database.py  enums.py  exception_handlers.py  exceptions.py  factory.py  utils.py
core/migrations/: env.py
core/scheduler/: __init__.py  app.py  start_huey.py
core/tests/: client.py  conftest.py
docker/: start_app.sh  start_prod.sh  start_with_ssl.sh
locales/: base.po
migrations/: env.py
migrations/versions/: 13ed9ba455e6_add_profile_picture_user_id_column.py  160c65de6723_add_profile_photo_column.py  33f8bbd1dcb2_allow_delete_on_room.py  60c401798398_allow_delete_posts_with_attachments.py  6df9b833bf68_allow_delete_on_users_table.py  7953f4b763c5_allow_delete_on_multiple_models.py  9f3bca65c1db_added_reset_deadline_field_to_user_model.py  b74c5ff203e0_added_user_avatar_field.py  be54d92e8360_change_profile_photo_on_profile_photo_id.py  bfd263dc402e_add_profile_picture_id_column.py
nginx/: nginx.conf
scheduler/: __init__.py  app.py  extensions.py  start_huey.py
scheduler/tasks/: __init__.py  classroom.py  email_messages.py  subjects.py  user.py
src/: aerich.ini  app.py  pyproject.toml  pytest.ini  requirements.txt
src/attachment/: exceptions.py  models.py  schemas.py  services.py  utils.py  views.py
templates/: Base.html
tests/: client.py  conftest.py
(+284 files in other folders)
