[tool.poetry]
name = "classroom_backend"
version = "1.0"
description = "Backend of classroom app"
authors = ["greedWizard <skavik46111@gmail.com>"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
aerich = "0.6.2"
aiomysql = "0.0.21"
aioredis = "2.0.1"
aiosmtplib = "1.1.6"
aiosqlite = "0.16.1"
anyio = "3.5.0"
asgiref = "3.5.0"
async-timeout = "4.0.2"
asyncpg = "0.22.0"
atlastk = "0.12.9"
atomicwrites = "1.4.0"
attrs = "20.3.0"
blinker = "1.4"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
click = "7.1.2"
colorama = "0.4.4"
coverage = "6.3.3"
dateutils = "0.6.12"
ddlparse = "1.9.0"
dependency-injector = "4.39.1"
Deprecated = "1.2.13"
dictdiffer = "0.8.1"
dnspython = "2.2.1"
email-validator = "1.2.0"
Faker = "9.8.1"
fastapi = "0.75.2"
fastapi-jwt-auth = "0.5.0"
fastapi-pagination = "0.7.4"
flake8 = "3.9.0"
h11 = "0.12.0"
httpcore = "0.14.7"
httpx = "0.22.0"
idna = "3.3"
iniconfig = "1.1.1"
iso8601 = "0.1.14"
Jinja2 = "3.1.1"
MarkupSafe = "2.1.1"
mccabe = "0.6.1"
mypy = "0.910"
mypy-extensions = "0.4.3"
packaging = "20.9"
pluggy = "0.13.1"
psycopg2 = "2.9.1"
py = "1.10.0"
pycodestyle = "2.7.0"
pydantic = "1.9.0"
pyflakes = "2.3.1"
PyJWT = "1.7.1"
PyMySQL = "0.9.3"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
python-environ = "0.4.54"
python-multipart = "0.0.5"
pytz = "2020.5"
redis = "4.1.4"
requests = "2.26.0"
rfc3986 = "1.5.0"
six = "1.15.0"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
sqlparse = "0.4.2"
starlette = "0.17.1"
text-unidecode = "1.3"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.10.0"
typing-extensions = "3.7.4.3"
tzdata = "2022.1"
urllib3 = "1.26.7"
uvicorn = "0.17.6"
websockets = "10.3"
wrapt = "1.14.0"
huey = "^2.4.3"
SQLAlchemy = "^1.4.37"
pytest-env = "^0.6.2"
alembic = "^1.8.0"
itsdangerous = "^2.1.2"
Pillow = "^9.2.0"
pre-commit = "^2.20.0"
ipython = "^8.4.0"
aiokafka = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.3"
pytest-asyncio = "0.18.3"
pytest-cov = "3.0.0"
pytest-mock = "3.7.0"
mock = "4.0.3"
freezegun = "1.1.0"
fakeredis = "1.7.1"
asyncmock = "0.4.2"
asynctest = "0.13.0"
factory-boy = "^3.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
